<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.vm.vktesttask.presentation.ValuesViewModel"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="272dp"
            android:layout_height="29dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="68dp"
            android:text="@string/app_name_label"
            android:textColor="@color/text_main"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_convert_from"
                    android:layout_width="0dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="72dp"
                    android:height="22dp"
                    android:text="@string/convert_from_label"
                    android:textColor="@color/text_main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_convert_to"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner_to"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/shape_spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_convert_to" />

                <Spinner
                    android:id="@+id/spinner_from"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/shape_spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_convert_from" />

                <TextView
                    android:id="@+id/tv_convert_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="72dp"
                    android:height="22dp"
                    android:text="@string/convert_to_label"
                    android:textColor="@color/text_main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_amount_to_convert"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_amount_to_convert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="72dp"
                    android:height="22dp"
                    android:text="@string/amount_to_convert_label"
                    android:textColor="@color/text_main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_conversion_rate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/shape_et"
                    android:inputType="number|numberDecimal"
                    android:paddingStart="16sp"
                    android:paddingTop="12sp"
                    android:paddingEnd="16sp"
                    android:paddingBottom="12sp"
                    android:text="10"
                    android:textColor="@color/text_main"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_amount_to_convert" />

                <TextView
                    android:id="@+id/tv_conversion_rate"
                    android:layout_width="0dp"
                    android:height="22dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="53dp"
                    android:text="@string/conversion_rate_label"
                    android:textColor="@color/text_main"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_currency"
                    android:layout_width="0dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@{viewModel.currency.toString()}"
                    android:textColor="@color/text_main"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_conversion_rate" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/shape_button"
                    android:text="@string/convert_label"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_enabled"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>